--- a/src/app/components/redes/redes.component.css
+++ b/src/app/components/redes/redes.component.css
@@ -3,3 +3,12 @@ img {
     margin: 2px;
 
 }
+
+.logos_redes {
+    /* background-color: rgb(226, 43, 43); */
+    top: 50%;
+
+}
+.logo-ap {
+    top: 50%;
+}
