--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -4,12 +4,18 @@ div{
 }
 app-redes {
     float: right;
-    margin-top: 20px;
-    margin-right: 20px;
+    /* width: 25%;   */
+    margin: 20px;
 }
 
 app-logo-ap {
-    
-    margin-top: 20px;
-    margin-left: 20px;
+    float: left;
+    /* width: 25%;     */
+    margin: 20px;
+
+}
+
+app-banner {
+    width: 100%;
+    height: 10%;
 }
