se agregaron stilos

--- a/src/app/components/redes/redes.component.html
+++ b/src/app/components/redes/redes.component.html
@@ -1,4 +1,4 @@
-<div class="">
+<div class="row">
     <!-- <div class="col-xs-12 col-sm-6 col-md-2 col-lg-12"> -->
         <div class="logos_redes">
             <a href="https://github.com/cyntiaguzman"><img src="../../../assets/github.png" alt=""></a>
