--- a/src/app/components/acerca/acerca.component.css
+++ b/src/app/components/acerca/acerca.component.css
@@ -1,13 +1,33 @@
 .row {
-    background-color: rgb(0, 255, 204);
-    padding: 0.5em;
+    background-color: #a465fcec;
+    padding: 15px;
+    /* opacity: calc(0.9); */
+   
 }
 /* .row > div{
     margin: 10px; 
 } */
 
 /* foto de perfil */
+.perfil_foto{
+    position: absolute;
+    width: 15%;
+    left: 5%; 
+    /* right: 50%;  */
+    top:500px;
+    /* border-radius: 25%; */
+}
+h1{
+    /* background-color: rgb(47, 174, 186); */
+    text-align: right;
 
+}
+p{
+    text-align: right;
+}
+span>p {
+   text-align: left;
+}
 
 /* medias query */
 
@@ -15,13 +35,14 @@
     .perfil_foto{
         position: absolute;
         width: 50%;
-        /* left: 50%;
-        right: 50%; */
-        top:200px;
-        border-radius: 25%;
+        left: 25%; 
+        /* right: 50%;  */
+        top:300px;
+        /* border-radius: 25%; */
+      
     }
     h1{
-        background-color: rgb(47, 174, 186);
+        /* background-color: rgb(47, 174, 186); */
 
     }
 
@@ -30,13 +51,13 @@
 @media screen and (min-width:480px) and (max-width:960px) {
     .perfil_foto{
         position: absolute;
-        width: 20%;
+        width: 100%;
         left: 5%;
         top: 30em;
         border-radius: 25%;
     }
     h1{
-        background-color: brown;
+        /* background-color: brown; */
 
     }
 
