--- a/src/app/components/banner/banner.component.css
+++ b/src/app/components/banner/banner.component.css
@@ -1,11 +1,36 @@
 img {
     width: 100%;
+    height: auto;
+ 
 }
 
 .banner {
     width: 100%;
+    /* display: flex;
+    justify-content: center; */
     
 }
-.banner > img {
+/* .banner > img {
     content: normal;
+    position: fixed;
+} */
+.banner {
+    width: 100%;
+    height: 750px;
+    /* background-image: url('../../../assets/banner.jpg'); */
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    position: fixed;
+ 
+    
+  }
+
+  
+  @media screen and (max-width:480px) {
+    .banner {
+        width: 150%;
+
+        /* height: 400px; */
+    }
 }
