--- a/src/app/components/educacion/educacion.component.css
+++ b/src/app/components/educacion/educacion.component.css
@@ -1,6 +1,39 @@
 .row {
-    padding: 5%;
+    padding: 15px;
+    background-color: #a465fcec;
+    justify-content: center;
 }
+
+h2, h3, h4{
+    /* display: inline; */
+    text-align: center;
+}
+
 h3, h4{
-    display: inline;
+    color: rgb(255, 255, 255);
+    text-shadow: 2px 1px rgba(0, 0, 0, 0.393) ;
+    /* padding: 5px; */
 }
+li{
+    margin-top: 20px;
+    height: 150px;
+    width: 100%;
+   
+    
+}
+ul{
+    list-style-type: none;
+    padding: 10px;
+    height: 400px;
+    background-color: rgb(47, 174, 186);
+    border-radius: 10%;
+    box-shadow: 3px 2px rgba(0, 0, 0, 0.484);
+  
+}
+ul>p{
+    text-align: center;
+    margin-left: 50px;
+    margin-right: 50px;
+}
+  
+  
