--- a/src/app/components/educacion/educacion.component.html
+++ b/src/app/components/educacion/educacion.component.html
@@ -1,7 +1,6 @@
 <div class="row">
-    <div>
         <h2>Educación</h2>
-        <div class="col-lg-10">
+        <div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
             <ul>
                 <li>
                     <h3>Titulo 1</h3> -
@@ -9,6 +8,8 @@
                 </li>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui fugit quam et quibusdam rem quis odit, itaque cumque! Impedit minima nostrum laudantium, fugit mollitia aut provident quia et aliquid ipsa?</p>
             </ul>
+        </div>
+        <div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
             <ul>
                 <li>
                     <h3>Titulo 2</h3> -
@@ -16,6 +17,8 @@
                 </li>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui fugit quam et quibusdam rem quis odit, itaque cumque! Impedit minima nostrum laudantium, fugit mollitia aut provident quia et aliquid ipsa?</p>
             </ul>
+        </div>
+        <div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
             <ul>
                 <li>
                     <h3>Titulo 3</h3> -
@@ -24,5 +27,5 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui fugit quam et quibusdam rem quis odit, itaque cumque! Impedit minima nostrum laudantium, fugit mollitia aut provident quia et aliquid ipsa?</p>
             </ul>
         </div>
-    </div>
+    
 </div>
