--- a/src/app/components/experiencia/experiencia.component.html
+++ b/src/app/components/experiencia/experiencia.component.html
@@ -1,30 +1,35 @@
 <div class="row">
-    <div>
+    
         <h2>Experiencia laboral</h2>
-        <div class="col-lg-10">
+      
+            <div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
             <ul>
                 <li>
-                    <h3>Trabajo 1</h3> -
+                    <h3>Trabajo 1</h3> 
                     <h4>(anio)</h4>
                 </li>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui fugit quam et quibusdam rem quis odit, itaque cumque! Impedit minima nostrum laudantium, fugit mollitia aut provident quia et aliquid ipsa?</p>
             </ul>
+            </div>
+            <div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
             <ul>
                 <li>
-                    <h3>Trabajo 2</h3> -
+                    <h3>Trabajo 2</h3> 
                     <h4>(anio)</h4>
                 </li>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui fugit quam et quibusdam rem quis odit, itaque cumque! Impedit minima nostrum laudantium, fugit mollitia aut provident quia et aliquid ipsa?</p>
             </ul>
+            </div>
+            <div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
             <ul>
                 <li>
-                    <h3>Trabajo 3</h3> -
+                    <h3>Trabajo 3</h3> 
                     <h4>(anio)</h4>
                 </li>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui fugit quam et quibusdam rem quis odit, itaque cumque! Impedit minima nostrum laudantium, fugit mollitia aut provident quia et aliquid ipsa?</p>
             </ul>
-
+           
         </div>
-    </div>
+    
 
 </div>
