--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,21 +1,36 @@
-div{
-    background-color: #a465fc;
-  
-}
-app-redes {
-    float: right;
-    /* width: 25%;   */
-    margin: 20px;
-}
 
-app-logo-ap {
-    float: left;
-    /* width: 25%;     */
-    margin: 20px;
-
-}
 
 app-banner {
     width: 100%;
     height: 10%;
 }
+.banner-content {
+    position: relative;
+    z-index: -1;
+    height: 750px;
+  }
+  
+  /* main {
+    position: relative;
+    z-index: 3;
+  } */
+  app-nav{
+    background-color: #a465fc;
+    /* width: 100%; */
+}
+@media screen and (max-width:480px) {
+    .banner-content {
+        width: 150%;
+
+        height: 450px;
+    }
+    
+}
+
+@media screen and (min-width:480px) and (max-width:960px) {
+   
+}
+
+
+
+
