--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,23 +1,13 @@
 <div class="row">
-    <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-        <!-- <div class="logo-ap"> -->
-            <app-logo-ap></app-logo-ap>
-            <!-- <app-redes></app-redes>
-            <app-banner></app-banner> -->
-        <!-- </div> -->
-    </div>
-    <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-        <!-- <div class="redes"> -->
-            <!-- <app-logo-ap></app-logo-ap> -->
-            <app-redes></app-redes>
-            <!-- <app-banner></app-banner> -->
-        <!-- </div> -->
-    </div>
-    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-        <div>
+    <!-- <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12"> -->
+        <app-nav></app-nav>
+    <!-- </div> -->
+    <!-- banner -->
+    <!-- <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12"> -->
+        <div class="banner-content">
             <!-- <app-logo-ap></app-logo-ap>
             <app-redes></app-redes> -->
             <app-banner></app-banner>
         </div>
-    </div>
+    <!-- </div> -->
 </div>
