--- a/src/app/components/logo-ap/logo-ap.component.css
+++ b/src/app/components/logo-ap/logo-ap.component.css
@@ -12,3 +12,11 @@ p{
     color: rgb(255, 255, 255);
     font-size: 18px;
 }
+
+@media screen and (max-width:480px) {
+    #logoAP {
+        width: 100px;
+        /* right: -20px; */
+        /* background-color: black; */
+    }
+}
