--- a/src/app/components/redes/redes.component.css
+++ b/src/app/components/redes/redes.component.css
@@ -12,3 +12,21 @@ img {
 .logo-ap {
     top: 50%;
 }
+
+
+@media screen and (max-width:480px) {
+    .row {
+        width: 100%;
+    }
+    img {
+        width: 25px;
+        margin: 2px;
+     
+    
+    }
+    .logos_redes {
+        width: 200px;
+        margin-left: 70px;
+        /* margin-bottom: 5px; */
+    }
+}
